config/objects/Performance__c.object
<CustomObject>
    <fields>
        <fullName>Artist_List_Cost__c</fullName>
        <formula>Artist__r.List_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List cost of the Artist</inlineHelpText>
        <label>Artist List Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Artist__c</fullName>
        <label>Artist</label>
        <referenceTo>Artist__c</referenceTo>
        <relationshipLabel>Performances</relationshipLabel>
        <relationshipName>Performances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Booking_Cost__c</fullName>
        <label>Booking Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Performances</relationshipLabel>
        <relationshipName>Performances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Performance</label>
    <nameField>
        <displayFormat>PERF-{0000}</displayFormat>
        <label>Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>